test/expected/declare_lc16.out
declare x as long char16_t
        ^
9: error: "long char16_t" is illegal for built-in type
